--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
 	},
 	"dependencies": {
-		"sirv-cli": "^1.0.0"
+		"firebase": "^9.1.0",
+		"firebaseui": "^5.0.0",
+		"sirv-cli": "^1.0.0",
+		"svelte-routing": "^1.6.0"
 	}
 }
