Switch Firebase Functions and RTDB...
...for Node.JS and socket.io

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "npm run build:tailwind && rollup -c",
 		"start": "sirv public",
 		"serve": "serve public -p 80",
-		"dev": "concurrently \"rollup -c -w\" \"npm run watch:tailwind\" \"firebase emulators:start --only database,functions\"",
+		"firebase": "concurrently \"rollup -c -w\" \"npm run watch:tailwind\" \"firebase emulators:start --only database,functions\"",
+		"dev": "concurrently \"rollup -c -w\" \"npm run watch:tailwind\"",
 		"lint": "eslint src --ext .js,.json,.svelte --fix"
 	},
 	"devDependencies": {
