--- a/prototype-2/package.json
+++ b/prototype-2/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^17.0.0",
 		"@rollup/plugin-node-resolve": "^11.0.0",
+		"@rollup/plugin-replace": "^3.1.0",
 		"autoprefixer": "^9.8.7",
 		"concurrently": "^6.2.1",
 		"cross-env": "^7.0.3",
@@ -31,6 +32,7 @@
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
 	},
 	"dependencies": {
+		"@tailwindcss/forms": "^0.4.0",
 		"firebase": "^9.1.0",
 		"firebase-admin": "^9.12.0",
 		"firebase-functions": "^3.15.7",
