--- a/prototype-2/server/package.json
+++ b/prototype-2/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "^8.1.0",
     "fastify": "^3.22.1",
+    "fastify-cors": "^6.0.2",
     "socket.io": "^4.3.1"
   },
   "devDependencies": {
