--- a/prototype-2/package.json
+++ b/prototype-2/package.json
@@ -8,13 +8,15 @@
   "author": "Isaac Saunders",
   "license": "MIT",
   "dependencies": {
-    "eslint": "^8.1.0",
+    "dotenv": "^16.0.0",
     "fastify": "^3.22.1",
     "fastify-cors": "^6.0.2",
     "fastify-static": "^4.5.0",
+    "moviedb-promise": "^3.1.13",
     "socket.io": "^4.3.1"
   },
   "devDependencies": {
+    "eslint": "^8.9.0",
     "nodemon": "^2.0.14"
   },
   "repository": {
